--- a/assets/style.css
+++ b/assets/style.css
@@ -177,12 +177,12 @@ header button {
   padding-right: 200px;
 }
 
-.heroSocial {
+.socialCol {
   display: flex;
   flex-direction: column;
 }
 
-.heroSocial span {
+.social span {
   background-color: #6610f2;
   border-radius: 50%;
   display: flex;
@@ -191,7 +191,7 @@ header button {
   margin-bottom: 15px;
 }
 
-.heroSocial i {
+.social i {
   font-size: 2.1rem;
   margin: auto;
 }
@@ -231,7 +231,7 @@ header button {
   margin-bottom: 27px;
 }
 
-.tagline .highlighted {
+.highlighted {
   background-image: linear-gradient(
     45deg,
     rgba(155, 93, 229, 1) 0%,
@@ -375,6 +375,55 @@ header button {
   background-color: rgba(102, 16, 242, 0.1);
   border-radius: 15px;
   padding: 20px 30px;
+}
+
+#education h5 {
+  text-align: center;
+}
+
+#connect {
+  background-color: var(--darkBgSecondary);
+  border-radius: 20px;
+  display: flex;
+  text-align: center;
+  margin: 0 auto 50px auto;
+  padding: 30px 0;
+  width: 75%;
+}
+
+#connect h5,
+#connect p {
+  margin-bottom: 20px;
+}
+
+#connect .social {
+  margin-top: 20px;
+}
+
+#connect .social span {
+  margin-right: 10px;
+}
+
+.connectText {
+  width: 55%;
+  margin: auto;
+}
+
+.mail {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.mail i {
+  margin-right: 5px;
+}
+
+#connect img {
+  position: absolute;
+  right: 10%;
+  height: 300px;
 }
 
 footer {
