--- a/assets/style.css
+++ b/assets/style.css
@@ -386,7 +386,7 @@ header button {
   border-radius: 20px;
   display: flex;
   text-align: center;
-  margin: 0 auto 50px auto;
+  margin: 0 auto 75px auto;
   padding: 30px 0;
   width: 75%;
 }
@@ -427,6 +427,10 @@ header button {
 }
 
 footer {
-  background-color: var(--darkBgSecondary);
+  background-image: url(./wave.svg);
   text-align: center;
+}
+
+footer p {
+  padding: 45px 0 10px 0;
 }
