--- a/assets/style.css
+++ b/assets/style.css
@@ -335,7 +335,8 @@ header button {
   display: flex;
 }
 
-#interests h6 {
+#interests h6,
+#education h6 {
   font-size: 1.7rem;
   font-weight: 500;
   margin-bottom: 8px;
@@ -379,6 +380,127 @@ header button {
 
 #education h5 {
   text-align: center;
+  margin: 50px 0 15px 0;
+}
+
+.eduCol {
+  margin-right: 65px;
+}
+
+.eduIcon {
+  background-color: var(--themePrimary);
+  height: 40px;
+  width: 40px;
+  display: flex;
+  margin: auto;
+  border-radius: 50%;
+}
+
+.eduIconCon {
+  border-radius: 50%;
+  height: 60px;
+  display: flex;
+  width: 60px;
+  margin: 0 auto 30px auto;
+  background-color: rgba(102, 16, 242, 0.5);
+}
+
+.eduIcon i {
+  margin: auto;
+}
+
+.eduContainer {
+  display: flex;
+  width: 75%;
+  margin: auto;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  white-space: nowrap;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+  min-height: 400px;
+}
+
+.eduCard {
+  background-color: var(--darkBgSecondary);
+  border-radius: 10px;
+  width: 250px;
+  white-space: normal;
+  padding: 30px 30px;
+}
+
+#education .eduCol hr {
+  color: var(--themePrimary);
+  background-color: var(--themePrimary);
+  height: 4px;
+  width: 50px;
+  margin: auto;
+}
+
+#timeLineHR {
+  position: relative;
+  z-index: -1;
+  top: 40px;
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  margin: auto;
+  font-size: 2.5rem;
+}
+
+#timeLineHR hr {
+  color: var(--darkText);
+  background-color: var(--darkText);
+  height: 4px;
+  border: 0;
+  width: 100%;
+  margin: auto;
+}
+
+.fa-caret-left {
+  position: relative;
+  left: 4px;
+}
+
+.fa-caret-right {
+  position: relative;
+  right: 4px;
+}
+
+.eduCard p {
+  margin: 20px auto 0 auto;
+  text-align: justify;
+  font-size: 1.5rem;
+}
+
+#experience {
+  width: 80%;
+  margin: 100px auto;
+  display: flex;
+}
+
+.expCont {
+  width: 60%;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  white-space: nowrap;
+  display: flex;
+  height: 275px;
+}
+
+.expText {
+  width: 40%;
+  padding-left: 40px;
+}
+
+.expCard {
+  width: 250px;
+  height: 250px;
+  background-color: var(--darkBgSecondary);
+  margin-right: 40px;
+  border-radius: 20px;
+  flex-shrink: 0;
 }
 
 #connect {
@@ -429,8 +551,13 @@ header button {
 footer {
   background-image: url(./wave.svg);
   text-align: center;
+  font-size: 1.5rem;
 }
 
 footer p {
   padding: 45px 0 10px 0;
+}
+
+footer a {
+  color: var(--themeSecondary);
 }
