--- a/assets/style.css
+++ b/assets/style.css
@@ -446,28 +446,28 @@ header button {
 
 .heroContent img {
   height: 250px;
-  border-radius: 45px;
+  border-radius: 30px;
+  box-shadow: 0 0 20px rgba(102, 16, 242, 0.5), 0 0 40px rgba(155, 93, 229, 0.5),
+    0 0 60px rgba(155, 93, 229, 0.5);
 }
 
-/* .profileDec {
+.profileDec {
   background-color: #6610f2;
-  border-radius: 20px;
+  border-radius: 30px;
   height: 200px;
   width: 200px;
-  position: relative;
+  position: absolute;
 }
 
 #dec1 {
-  top: 125px;
-  right: 125px;
   z-index: -1;
+  transform: translate(-60px, -60px);
 }
 
 #dec2 {
-  bottom: 100px;
-  left: 100px;
-  z-index: -2;
-} */
+  z-index: -1;
+  transform: translate(110px, -140px);
+}
 
 .heroCTA {
   padding: 10px 20px;
