--- a/assets/style.css
+++ b/assets/style.css
@@ -447,8 +447,8 @@ header button {
 .heroContent img {
   height: 250px;
   border-radius: 30px;
-  box-shadow: 0 0 20px rgba(102, 16, 242, 0.5), 0 0 40px rgba(155, 93, 229, 0.5),
-    0 0 60px rgba(155, 93, 229, 0.5);
+  box-shadow: 0 0 40px rgba(102, 16, 242, 0.5), 0 0 60px rgba(155, 93, 229, 0.5),
+    0 0 80px rgba(155, 93, 229, 0.5);
 }
 
 .profileDec {
@@ -539,7 +539,8 @@ header button {
 
 #interests h6,
 #education h6,
-#experience h6 {
+#experience h6,
+#projects h6 {
   font-size: 1.9rem;
   font-weight: 500;
   margin-bottom: 8px;
@@ -603,7 +604,7 @@ header button {
 }
 
 .expBtn {
-  border-radius: 8px;
+  border-radius: 30px;
   border: var(--themePrimary) 2px solid;
   color: var(--darkText);
   padding: 6px 22px;
@@ -771,20 +772,20 @@ e {
   width: 80%;
   margin: 100px auto;
   display: flex;
+  align-items: center;
 }
 
 .proCont {
-  width: 60%;
+  width: 65%;
   overflow-x: hidden;
   cursor: pointer;
   scroll-snap-type: x mandatory;
   white-space: nowrap;
   display: flex;
-  height: 275px;
 }
 
 .proText {
-  width: 40%;
+  width: 35%;
   padding-left: 40px;
   margin-left: 100px;
 }
@@ -795,12 +796,26 @@ e {
 }
 
 .proCard {
-  width: 250px;
-  height: 250px;
+  width: 350px;
   background-color: var(--darkBgSecondary);
   margin-right: 40px;
   border-radius: 20px;
   flex-shrink: 0;
+  text-align: center;
+}
+
+.proCard p {
+  word-wrap: break-word;
+  white-space: normal;
+  margin: 0 20px 20px 40px;
+}
+
+.proCard img {
+  border-radius: 15px;
+  width: 310px;
+  margin: 20px auto 20px auto;
+  object-fit: cover;
+  display: block;
 }
 
 .btnProjects {
