--- a/assets/style.css
+++ b/assets/style.css
@@ -162,6 +162,11 @@ header {
   position: relative;
 }
 
+.logoImg {
+  width: 50px;
+  height: auto;
+}
+
 h1 {
   font-size: 2.5rem;
   font-weight: 400;
